<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pubsub_package</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="vmwsp@todo.todo">vmwsp</maintainer>
  <license>TODO: License declaration</license>
  <depend>rclpy</depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <!-- <buildtool_depend>ament_cmake</buildtool_depend> -->
  <build_depend>rosidl_default_generators</build_depend>
  <!-- <exec_depend>rosidl_default_runtime</exec_depend> -->
  <member_of_group>rosidl_interface_packages</member_of_group>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
